[package]
name = "dvkm_libafl_qemu_pt"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl = { git = "https://github.com/Marcondiro/LibAFL", rev = "ac8b365", default-features = false }
libafl_bolts = { git = "https://github.com/Marcondiro/LibAFL", rev = "ac8b365" }
libafl_qemu = { git = "https://github.com/Marcondiro/LibAFL", rev = "ac8b365", default-features = false, features = [
  "intel_pt",
] }
env_logger = "0.11.5"
